--- a/sample_test.tex
+++ b/sample_test.tex
@@ -91,6 +91,10 @@ Test English section name.
 \end{figure}
 \end{landscape}
 
+\section{脚注演示}
+脚注示例如\footnotemark[1]所示，先作footnotemark，括号中似乎只能用整数；然后再补充footnotetext内容，建议少用，脚注太多的话注意脚注的序号。\footnotetext[1]{括号内整数要对应，编译显示的序号就为括号内的数值，并不会自动排序。}
+
+
 \section{公式演示}
 公式引用应在引用标签外加括号，如公式(\ref{eq1})。
 \begin{equation}\label{eq1}
