--- a/sample_test.tex
+++ b/sample_test.tex
@@ -120,7 +120,7 @@ Test English section name.
 }
 \end{table}
 
-画表格推荐先在Excel简单制表，然后复制到该网页{Create LaTeX tables online https://tablesgenerator.com/}自动生成tex代码再粘贴过来（按需进一步简单修改）。
+画表格推荐先在Excel简单制表，然后复制到该网页{Create LaTeX tables online https://tablesgenerator.com/}自动生成tex代码再粘贴过来（按需进一步简单修改）。表格应采用小号字体，在没有缩放前提下表格内字体会偏大，所以应在表格$\setminus$begin$\{table\}$下方添加$\setminus small$命令，如表 \ref{T23}所示。
 \begin{table}[htp]
 \small%表格采用小号字体，若是没有缩放，则建议使用该设置
 \centering
